# GuardianBot

./: .gitignore  ArgumentParser.cpp  ArgumentParser.hpp  Array.hpp  CMakeLists.txt  CVmisc.hpp  Camera.cpp  Camera.hpp  GLmisc.hpp  GuardianBot.ino  ImGuiConstants.hpp  ImGuiWindows.hpp  Map.hpp  conanfile.txt  glstuff.cpp  glstuff.hpp  main.cpp  meta.hpp  readme.md
Arduino/GuardianBot/: GuardianBot.ino
CMake/: AddGLFW.cmake  AddGlew.cmake  AddLibRealSense.cmake  AddOpenCV2.cmake  BuildDearImGui.cmake  OpenCVDepsToTargets.cmake
ImageCompare/: CMakeLists.txt  imgcmp.cpp  imgcmp.hpp
MatrixCopy/: CMakeLists.txt  MatrixCopy.cpp  MatrixCopy.hpp
Serial/: CMakeLists.txt  SerialPort.cpp  SerialPort.hpp  SerialPortImpl.cpp
cli/: ArgumentParser.cpp  ArgumentParser.hpp  CMakeLists.txt  Exception.hpp
events/: CMakeLists.txt  Emitter.hpp  Event.hpp  Listener.cpp  Listener.hpp  Queue.hpp  Stack.hpp
gl/: CMakeLists.txt  IndexBuffer.hpp  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexArrayLayout.cpp  VertexArrayLayout.hpp  VertexBuffer.hpp  gl.hpp  glstuff.cpp  glstuff.hpp
resources/: FragmentDefault.shader  VertexDefault.shader
vidIO/: CMakeLists.txt  CVCameraAdapter.cpp  CVCameraAdapter.hpp  Camera.cpp  Camera.hpp  CameraAdapter.cpp  CameraAdapter.hpp  RSCameraAdapter.cpp  RSCameraAdapter.hpp
